fixed overflow

--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 html,
 body {
   display: flex;
-  justify-content: center;
   align-items: center;
+  min-height: 100vh;
+
+  justify-content: center;
   background-color: rgb(0, 0, 0);
-  height: 100%;
 }
 
 .container {
@@ -12,7 +13,7 @@ body {
   grid-template-columns: repeat(4, 1fr);
   background-color: rgb(139, 139, 139);
   grid-auto-rows: 10vh;
-  width: 20vw;
+  min-width: 20vw;
   padding: 5px;
   border-radius: 5px;
 }
